# automatic-operation

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  skill_config.json  steps.json
scripts/: __init__.py  auto-operate.js  generate_run.py  playback.py  record_spy.js  recorder.py
