[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automatic-operation-skill"
version = "2.0.0"
description = "网页自动化操作录制 Skill — 前端监听 → 后端捕获 → AI 精炼 → 执行校验"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aicase"}
]
keywords = ["playwright", "automation", "recording", "web-automation", "browser-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40",
]

[project.optional-dependencies]
ai = ["requests>=2.28"]

[project.scripts]
auto-recorder = "scripts.recorder:main"
auto-playback = "scripts.playback:main"
auto-generate = "scripts.generate_run:main"

[project.urls]
Homepage = "https://github.com/Aicase/automatic-operation"
Repository = "https://github.com/Aicase/automatic-operation"
Issues = "https://github.com/Aicase/automatic-operation/issues"

[tool.setuptools]
packages = ["scripts"]

[tool.setuptools.package-data]
scripts = ["*.js"]
